syntax = "proto3";
package pulse.study.sensitivity_analysis.bind;
option java_package = "pulse.study.sensitivity_analysis.bind";
option csharp_namespace = "pulse.study.sensitivity_analysis.bind";
option optimize_for = SPEED;

import "pulse/cdm/bind/Actions.proto";

message SimulationData
{
  // A filename without an extension (can/should have path also)
  // The engine will use this to create multiple output files (*.log and *.csv)
  uint32                       ID                                      = 1;
  string                       Name                                    = 2;
  pulse.cdm.bind.OverridesData Overrides                               = 3;
  
  double                       ArterialPressure_mmHg                   = 4;
  double                       BloodVolume_mL                          = 5;
  double                       CardiacOutput_L_Per_min                 = 6;
  double                       CentralVenousPressure_mmHg              = 7;
  double                       CerebralBloodFlow_L_Per_min             = 8;
  double                       CerebralPerfusionPressure_mmHg          = 9;
  double                       DiastolicArterialPressure_mmHg          = 10;
  double                       HeartEjectionFraction                   = 11;
  double                       HeartRate_bpm                           = 12;
  double                       HeartStrokeVolume_mL                    = 13;
  double                       IntracranialPressure_mmHg               = 14;
  double                       MeanArterialPressure_mmHg               = 15;
  double                       PulmonaryArterialPressure_mmHg          = 16;
  double                       PulmonaryCapillariesWedgePressure_mmHg  = 17;
  double                       PulmonaryDiastolicArterialPressure_mmHg = 18;
  double                       PulmonaryMeanArterialPressure_mmHg      = 19;
  double                       PulmonaryMeanCapillaryFlow_L_Per_min    = 20;
  double                       PulmonarySystolicArterialPressure_mmHg  = 21;
  double                       SystolicArterialPressure_mmHg           = 22;
  double                       SystemicVascularResistance_mmHg_s_Per_L = 23;

  // Stabilization Information
  bool                         AchievedStabilization                   = 24;
  double                       StabilizationTime_s                     = 25;
  
}

message SimulationListData
{
  string                       OutputRootDir                           = 1;
  repeated SimulationData      Simulation                              = 2;
}
